--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
           <h2>コスパ最高のコースメニュー</h2>
           <p>シーンに合わせて選べる、3種類のコースをご用意しています。</p>
           <ul>
-            <li>● カジュアルコース　2,980円</li>
-            <li>● スタンダードコース　3,980円</li>
-            <li>● プレミアムコース　5,980円</li>
+            <li>カジュアルコース　2,980円</li>
+            <li>スタンダードコース　3,980円</li>
+            <li>プレミアムコース　5,980円</li>
           </ul>
           <p>
             女子会やお仲間とのご宴会におすすめ。詳細は
