仮全ページ

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <video id="heroVideo" autoplay muted playsinline></video>
         <div class="hero-overlay">
             <p class="overlay-sub">いつも笑顔が溢れる明るい店内で</p>
-            <h1 class="overlay-main">普段使いの気取らない贅沢を。</h1>
-            <p class="overlay-note">Italian Wine Bar ChibaTech / イタリアン CIT</p>
+            <h1 class="overlay-main">Italian Wine Bar ChibaTech / イタリアン CIT</h1>
+            <p class="overlay-note">普段使いの気取らない贅沢を。</p>
         </div>
       </div>
     </header>
@@ -41,6 +41,9 @@
         <!-- コンセプト -->
         <section class="section" id="concept">
           <h2> ― 気取らない贅沢を、CITで。</h2>
+          <div class="card">
+          <img src="assets/images/内装2-2.png" alt="内装のイメージ">
+          </div>
           <p>
             都田沼駅より徒歩2分とアクセス抜群。お仕事帰りや大切なパートナーとの時間はもちろん、
             ひとり飲みにも様々なシーンでご利用いただける、カジュアルなワイン酒場です。
