--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 
         <!-- コンセプト -->
         <section class="section" id="concept">
-          <h2> ― 気取らない贅沢を、CITで。</h2>
-          <div class="card">
-          <img src="assets/images/内装2-2.png" alt="内装のイメージ">
-          </div>
+        <div class="concept-image">
+            <img src="assets/images/内装2-2.png" alt="店内の様子">
+            <h1 class="concept-title"> ― 気取らない贅沢を、CITで。</h1>
+        </div>
           <p>
-            都田沼駅より徒歩2分とアクセス抜群。お仕事帰りや大切なパートナーとの時間はもちろん、
-            ひとり飲みにも様々なシーンでご利用いただける、カジュアルなワイン酒場です。
+            お仕事帰りや大切なパートナーとの時間、
+            ひとり飲みにも様々なシーンでご利用いただけるカジュアルなワイン酒場です。
           </p>
           <p>
             幸せを呼ぶ…ワインと国産牛肉とチーズの美味しいお店です。<br>
@@ -65,40 +65,33 @@
           </p>
         </section>
 
-        <!-- こだわり（1〜3をカード風に） -->
+        <!-- こだわり紹介 -->
         <section class="section" id="kodawari">
           <h2>こだわり</h2>
 
-          <div class="card-grid">
-            <div class="card">
-              <img src="assets/images/絶品アヒージョ人気メニュ0.jpg" alt="日替わりのイメージ">
-              <h3>1. 日替わりメニュー</h3>
-              <p>
-                豊富な日替わりメニュー！旬の美味しいお野菜、魚、お肉で美味しい料理を提供しております。
-                毎日変わるおすすめメニューも大人気。ワインと一緒にお楽しみください。
-              </p>
-            </div>
+          <div class="card-grid kodawari-grid">
 
-            <div class="card">
+            <!-- 1. 日替わりメニュー → Menu -->
+            <a class="card kodawari-card" href="menu.html">
+              <img src="assets/images/絶品アヒージョ人気メニュ0.jpg" alt="日替わりメニューのイメージ">
+              <div class="kodawari-label">1. 日替わりメニュー</div>
+            </a>
+
+            <!-- 2. 気軽に立ち寄れるワイン酒場 → Menu -->
+            <a class="card kodawari-card" href="menu.html">
               <img src="assets/images/こだわり2または4.jpg" alt="ワインとアラカルトのイメージ">
-              <h3>2. 気軽に立ち寄れるワイン酒場</h3>
-              <p>
-                ワインに合わせたリーズナブルで美味しいアラカルトメニューも豊富です。
-                オーナーが美味しいと思うワインを取り揃えておりますので、
-                お気軽にふらっとお立ち寄りください。
-              </p>
-            </div>
+              <div class="kodawari-label">2. 気軽に立ち寄れるワイン酒場</div>
+            </a>
 
-            <div class="card">
-              <img src="assets/images/こだわり3コース料理.jpg" alt="料理のイメージ">
-              <h3>3. パーティーコース＆チーズ</h3>
-              <p>
-                お得なコースメニューは 2,980円から3種類ご用意。飲み放題付きコースも人気です。
-                ワインと相性抜群の絶品チーズを使ったメニューも多数ご用意しております。
-              </p>
-            </div>
+            <!-- 3. パーティーコース＆チーズ → Course -->
+            <a class="card kodawari-card" href="course.html">
+              <img src="assets/images/こだわり3コース料理.jpg" alt="コース料理のイメージ">
+              <div class="kodawari-label">3. パーティーコース＆チーズ</div>
+            </a>
+
           </div>
         </section>
+
 
         <!-- コースメニュー概要 -->
         <section class="section" id="course-summary">
@@ -114,16 +107,6 @@
             <a href="course.html">Course ページ</a>をご覧ください。
           </p>
         </section>
-
-        <!-- 誕生日・サプライズ -->
-        <section class="section" id="birthday">
-          <h2>誕生日・サプライズも大歓迎</h2>
-          <p>
-            誕生日のサプライズも大歓迎！ケーキ持ち込み可能です。<br>
-            主役の方にとって、忘れられない一日になるようスタッフがお手伝いいたします。
-          </p>
-        </section>
-
       </article>
 
       <!-- サイドバー（店舗情報・アクセス） -->
@@ -131,7 +114,7 @@
         <section class="section side-box" id="shop-info">
           <h2>店舗情報</h2>
           <p>
-            お店の名前：Italian Wine Bar ChibaTech（イタリアン CIT）<br>
+            Italian Wine Bar ChibaTech（イタリアン CIT）<br>
             住所：〒999-999　奈良氏之市都田沼123<br>
             電話：000-1234-5678
           </p>
@@ -146,6 +129,14 @@
           <p>
             詳細な地図や営業時間は
             <a href="access.html">Access ページ</a>をご覧ください。
+          </p>
+        </section>
+
+        <section class="section side-box" id="birthday">
+          <h2>誕生日・サプライズも大歓迎</h2>
+          <p>
+            誕生日のサプライズも大歓迎！ケーキ持ち込み可能です。<br>
+            主役の方にとって、忘れられない一日になるようスタッフがお手伝いいたします。
           </p>
         </section>
 
