--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <!-- ヘッダー -->
     <header class="site-header">
       <div class="logo-area">
-        <img src="assets/logo/mainlogo.png" alt="ロゴ" class="logo">
+        <a href="index.html">
+            <img src="assets/logo/mainlogo.png" alt="ロゴ" class="logo">
+        </a>
         <nav class="global-nav">
         <ul>
             <li><a href="index.html">Home</a></li>
