--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <section class="section" id="concept">
         <div class="concept-image">
             <img src="assets/images/内装2-2.png" alt="店内の様子">
-            <h1 class="concept-title"> ― 気取らない贅沢を、CITで。</h1>
+            <h class="concept-title"> ― 気取らない贅沢を、CITで。</h>
         </div>
           <p>
             お仕事帰りや大切なパートナーとの時間、
