--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- コンセプト -->
         <section class="section" id="concept">
         <div class="concept-image">
-            <img src="assets/images/内装2-2.png" alt="店内の様子">
+            <img class="concept-image" src="assets/images/内装2-2.png" alt="店内の様子">
             <h class="concept-title"> ― 気取らない贅沢を、CITで。</h>
         </div>
           <p>
