--- a/course.html
+++ b/course.html
@@ -117,20 +117,40 @@
 
       <!-- サイドバー -->
       <aside class="sidebar">
-        <section class="section side-box">
-          <h2>女子会・記念日に</h2>
+        <section class="section side-box" id="shop-info">
+          <h2>店舗情報</h2>
           <p>
-            サプライズ演出やバースデープレートもご用意可能です。<br>
-            「こんなことがしたい！」というご希望があれば、
-            ぜひスタッフまでご相談ください。
+            Italian Wine Bar ChibaTech（イタリアン CIT）<br>
+            住所：〒999-999　奈良氏之市都田沼123<br>
+            電話：000-1234-5678
           </p>
         </section>
 
-        <section class="section side-box">
-          <h2>貸切のご相談</h2>
+        <section class="section side-box" id="access">
+          <h2>アクセス</h2>
           <p>
-            8名様以上の貸切は、定休日でもお気軽にお電話でご相談ください。<br>
-            人数・ご予算に応じたコース提案も可能です。
+            都田沼駅より徒歩2分とアクセス抜群！<br>
+            学校帰りやお仕事帰りに、ふらっと立ち寄れるロケーションです。
+          </p>
+          <p>
+            詳細な地図や営業時間は
+            <a href="access.html">Access ページ</a>をご覧ください。
+          </p>
+        </section>
+
+        <section class="section side-box" id="birthday">
+          <h2>誕生日・サプライズも大歓迎</h2>
+          <p>
+            誕生日のサプライズも大歓迎！ケーキ持ち込み可能です。<br>
+            主役の方にとって、忘れられない一日になるようスタッフがお手伝いいたします。
+          </p>
+        </section>
+
+        <section class="section side-box" id="reservation">
+          <h2>ご予約・貸切</h2>
+          <p>
+            8名様以上の貸切は定休日でもお気軽にお電話でご相談ください。<br>
+            飲み放題付きコースやパーティー利用のご相談も承ります。
           </p>
         </section>
       </aside>
