--- a/menu.html
+++ b/menu.html
@@ -51,6 +51,9 @@
           </p>
         </section>
 
+        <img class="concept-image" src="assets/images/ワインと人気メニュー.jpg" alt="ワインと人気メニュー">
+        
+
         <!-- フードメニュー -->
         <section class="section" id="food-menu">
           <h2>Food</h2>
