--- a/course.html
+++ b/course.html
@@ -53,6 +53,8 @@
           </p>
         </section>
 
+        <img class="concept-image" src="assets/images/こだわり5 (2).jpg" alt="店内の様子">
+
         <!-- 各コース詳細 -->
         <section class="section" id="casual-course">
           <h2>カジュアルコース　2,980円</h2>
